<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jwong.todo.todo.ToDo" >
    
    <item android:id="@+id/addItem"
        android:title="@string/addItem"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/done"
        android:title="@string/done"
        android:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:visible="false"/>

    <item android:id="@+id/deleteItem"
        android:title="@string/deleteItem"
        android:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:visible="false"/>


    <item android:id="@+id/editItem"
        android:title="@string/editItem"
        android:orderInCategory="3"
        android:visible="false"
        android:showAsAction="ifRoom" />
</menu>
