<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1"
    android:padding="5dp">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/taskNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/taskDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="No Description"/>


    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/completeTaskBy"
            android:id="@+id/completeDateTextView"
            android:layout_column="0"
            android:layout_weight="1"/>

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="right"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/dateTextView"
            android:layout_gravity="right"
            android:layout_column="1"
            android:hint="@string/hint_noDateSet"
            />
    </TableRow>
</TableLayout>
