<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:descendantFocusability="beforeDescendants"
    android:tag="closed">

    <TableLayout
        android:id="@+id/cardTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="15dp"
        android:background="@drawable/selector_card_background"
        android:descendantFocusability="afterDescendants">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/cardTaskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cardTaskName"/>

            <TextView
                android:id="@+id/cardTaskDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#888888"
                android:gravity="right"
                android:text="@string/cardTaskDate"
                android:layout_column="3" />
        </TableRow>




        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/cardTaskDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#888888"
                android:maxLines="2"
                android:text="@string/cardTaskDescription"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:paddingLeft="5dp"
                android:gravity="right"
                android:id="@+id/cardSelectedButton"
                android:src="@drawable/card_selected_grey"
                android:layout_column="2"
                android:background="@android:color/transparent"
                android:visibility="invisible"
                android:onClick="buttonOnClick"
                android:layout_gravity="bottom" />

        </TableRow>

    </TableLayout>
</FrameLayout>

