<?xml version="1.0" encoding="utf-8"?>


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1"
        android:padding="5dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:id="@+id/taskNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_task_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:layout_weight="1">

            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/taskDescriptionEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_task_description"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                android:layout_weight="1"
                android:maxHeight="200dp"
                ></EditText>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Complete Task By:"
                android:id="@+id/completeDateTextView"
                android:layout_column="0"
                android:layout_weight="1"/>

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="right"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/dateTextView"
                android:layout_gravity="right"
                android:layout_column="1"
                android:hint="@string/taskOptional"
                />
        </TableRow>

<!--
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/saveTaskButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/button_save_task"
                android:layout_weight="1"
                android:layout_column="0">

            </Button>
        </TableRow>
-->

    </TableLayout>

